--- a/forjob/src/assets/_dashboard.scss
+++ b/forjob/src/assets/_dashboard.scss
@@ -199,6 +199,26 @@ li {
   border: 2px outset rgb(61, 61, 61);
   border-radius: 5px;
 }
+/* txt-move */
+.txt-right{
+  position: relative;
+}
+.txt-right h4{
+  position: absolute;
+  animation: txtr 3s 1  ;
+}
+.txt-right p{
+  position: absolute;
+}
+
+@keyframes txtr{
+  from{
+    right:0;
+  }
+  to{
+    left: 50%;
+  }
+}
 
 /* time line */
 .time-line {
@@ -242,6 +262,16 @@ li {
   top: 0;
   right: 50%;
   bottom: 0;
+  animation: line 3s 1 ;
+}
+@keyframes line{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+
 }
 
 //-------------------咱是分隔線----------------------//
