--- a/forjob/src/assets/helper/_variables.scss
+++ b/forjob/src/assets/helper/_variables.scss
@@ -253,6 +253,7 @@ $box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
 
 $component-active-color:      $dark !default;
 $component-active-bg:         theme-color("white") !default;
+$component-active-bg-drop:    theme-color("dark") !default;
 
 $caret-width:                 .3em !default;
 $caret-vertical-align:        $caret-width * .85 !default;
@@ -785,6 +786,7 @@ $dropdown-link-disabled-color:      $gray-600 !default;
 
 $dropdown-item-padding-y:           .25rem !default;
 $dropdown-item-padding-x:           1.5rem !default;
+
 
 $dropdown-header-color:             $gray-600 !default;
 
